// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderHomeNav Rendering Render HeaderHomeNav component with active Home 1`] = `
<div
  className="HeaderHomeNav varClassName"
>
  <a
    aria-current="page"
    className="HeaderHomeNav__link"
    href="/home"
    id="headerHomeLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Home"
    />
  </a>
  <a
    aria-current={null}
    className="HeaderHomeNav__link"
    href="/index"
    id="headerWorkflowsLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Workflows"
    />
  </a>
</div>
`;

exports[`HeaderHomeNav Rendering Render HeaderHomeNav component with active Workflows 1`] = `
<div
  className="HeaderHomeNav varClassName"
>
  <a
    aria-current={null}
    className="HeaderHomeNav__link"
    href="/home"
    id="headerHomeLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Home"
    />
  </a>
  <a
    aria-current="page"
    className="HeaderHomeNav__link"
    href="/index"
    id="headerWorkflowsLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Workflows"
    />
  </a>
</div>
`;

exports[`HeaderHomeNav Rendering Render HeaderHomeNav component with default props 1`] = `
<div
  className="HeaderHomeNav"
>
  <a
    aria-current="page"
    className="HeaderHomeNav__link"
    href="/home"
    id="headerHomeLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Home"
    />
  </a>
</div>
`;

exports[`HeaderHomeNav Rendering Render HeaderHomeNav component with inactive Home 1`] = `
<div
  className="HeaderHomeNav varClassName"
>
  <a
    aria-current={null}
    className="HeaderHomeNav__link"
    href="/home"
    id="headerHomeLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Home"
    />
  </a>
</div>
`;

exports[`HeaderHomeNav Rendering Render HeaderHomeNav component with props 1`] = `
<div
  className="HeaderHomeNav varClassName"
>
  <a
    aria-current="page"
    className="HeaderHomeNav__link"
    href="/home"
    id="headerHomeLink"
  >
    <HeaderIcon
      icon={[Function]}
      label="Home"
    />
  </a>
</div>
`;
